--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       name="Alex"
       content="Todo-list"
     />
-    <title>React App</title>
+    <title>Todo App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
