--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
       name="Alex"
       content="Todo-list"
     />
-    <title>React App</title>
+    <title>Todo App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app</noscript>
     <div id="root"></div>
   </body>
 </html>
